Corte 2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> BOT
Rule 1     BOT -> CREATE EXECUTE CLOSE_SCOPE
Rule 2     CREATE -> TkCreate OPEN_SCOPE DECLARATIONS
Rule 3     CREATE -> OPEN_SCOPE
Rule 4     OPEN_SCOPE -> empty
Rule 5     CLOSE_SCOPE -> empty
Rule 6     DECLARATIONS -> DECLARATIONS TYPE TkBot IDENT_LIST REGISTER_ROBOTS ACTIONS TkEnd
Rule 7     REGISTER_ROBOTS -> empty
Rule 8     DECLARATIONS -> empty
Rule 9     TYPE -> TkInt
Rule 10    TYPE -> TkBool
Rule 11    TYPE -> TkCaracter
Rule 12    IDENT_LIST -> TkIdent
Rule 13    IDENT_LIST -> IDENT_LIST TkComa TkIdent
Rule 14    ACTIONS -> ACTIONS TkOn ENTER_BEHAVIOR CONDITION TkDosPuntos OPEN_SCOPE INSTRUCTION_C TkEnd CLOSE_SCOPE EXIT_BEHAVIOR
Rule 15    ENTER_BEHAVIOR -> empty
Rule 16    EXIT_BEHAVIOR -> empty
Rule 17    ACTIONS -> empty
Rule 18    CONDITION -> TkActivation
Rule 19    CONDITION -> TkDeactivation
Rule 20    CONDITION -> EXP_BINARIA
Rule 21    CONDITION -> TkDefault
Rule 22    INSTRUCTION_C -> INSTRUCTION_C SIMPLE_INSTRUCTION_C
Rule 23    INSTRUCTION_C -> SIMPLE_INSTRUCTION_C
Rule 24    INSTRUCTION_E -> INSTRUCTION_E SIMPLE_INSTRUCTION_E
Rule 25    INSTRUCTION_E -> SIMPLE_INSTRUCTION_E
Rule 26    SIMPLE_INSTRUCTION_C -> TkStore EXP_BINARIA TkPunto
Rule 27    SIMPLE_INSTRUCTION_C -> TkCollect TkPunto
Rule 28    SIMPLE_INSTRUCTION_C -> TkCollect TkAs TkIdent TkPunto
Rule 29    SIMPLE_INSTRUCTION_C -> TkDrop EXP_BINARIA TkPunto
Rule 30    DIRECTION -> TkLeft
Rule 31    DIRECTION -> TkRight
Rule 32    DIRECTION -> TkUp
Rule 33    DIRECTION -> TkDown
Rule 34    SIMPLE_INSTRUCTION_C -> TkRead TkPunto
Rule 35    SIMPLE_INSTRUCTION_C -> TkRead TkAs TkIdent TkPunto
Rule 36    SIMPLE_INSTRUCTION_C -> TkSend TkPunto
Rule 37    SIMPLE_INSTRUCTION_C -> DIRECTION TkPunto
Rule 38    SIMPLE_INSTRUCTION_C -> DIRECTION EXP_BINARIA TkPunto
Rule 39    SIMPLE_INSTRUCTION_E -> TkActivate IDENT_LIST TkPunto
Rule 40    SIMPLE_INSTRUCTION_E -> TkDeactivate IDENT_LIST TkPunto
Rule 41    SIMPLE_INSTRUCTION_E -> TkAdvance IDENT_LIST TkPunto
Rule 42    SIMPLE_INSTRUCTION_E -> TkIf EXP_BINARIA TkDosPuntos INSTRUCTION_E TkEnd
Rule 43    SIMPLE_INSTRUCTION_E -> TkIf EXP_BINARIA TkDosPuntos INSTRUCTION_E TkElse TkDosPuntos INSTRUCTION_E TkEnd
Rule 44    SIMPLE_INSTRUCTION_E -> TkWhile EXP_BINARIA TkDosPuntos INSTRUCTION_E TkEnd
Rule 45    SIMPLE_INSTRUCTION_E -> CREATE EXECUTE CLOSE_SCOPE
Rule 46    EXECUTE -> TkExecute INSTRUCTION_E TkEnd
Rule 47    EXP_BINARIA -> EXP_BINARIA TkSuma EXP_BINARIA
Rule 48    EXP_BINARIA -> EXP_BINARIA TkResta EXP_BINARIA
Rule 49    EXP_BINARIA -> EXP_BINARIA TkMult EXP_BINARIA
Rule 50    EXP_BINARIA -> EXP_BINARIA TkDiv EXP_BINARIA
Rule 51    EXP_BINARIA -> EXP_BINARIA TkMod EXP_BINARIA
Rule 52    EXP_BINARIA -> EXP_BINARIA TkConjuncion EXP_BINARIA
Rule 53    EXP_BINARIA -> EXP_BINARIA TkDisyuncion EXP_BINARIA
Rule 54    EXP_BINARIA -> EXP_BINARIA TkIgual EXP_BINARIA
Rule 55    EXP_BINARIA -> EXP_BINARIA TkNoIgual EXP_BINARIA
Rule 56    EXP_BINARIA -> EXP_BINARIA TkMenorIgual EXP_BINARIA
Rule 57    EXP_BINARIA -> EXP_BINARIA TkMayorIgual EXP_BINARIA
Rule 58    EXP_BINARIA -> EXP_BINARIA TkMenor EXP_BINARIA
Rule 59    EXP_BINARIA -> EXP_BINARIA TkMayor EXP_BINARIA
Rule 60    EXP_BINARIA -> TkParAbre EXP_BINARIA TkParCierra
Rule 61    EXP_BINARIA -> TkNegacion EXP_BINARIA
Rule 62    EXP_BINARIA -> TkResta EXP_BINARIA
Rule 63    EXP_BINARIA -> TkNum
Rule 64    EXP_BINARIA -> TkMe
Rule 65    EXP_BINARIA -> TkTrue
Rule 66    EXP_BINARIA -> TkFalse
Rule 67    EXP_BINARIA -> TkIdent
Rule 68    EXP_BINARIA -> TkCaracter
Rule 69    empty -> <empty>

Terminals, with rules where they appear

TkActivate           : 39
TkActivation         : 18
TkAdvance            : 41
TkAs                 : 28 35
TkBool               : 10
TkBot                : 6
TkCaracter           : 11 68
TkCollect            : 27 28
TkComa               : 13
TkConjuncion         : 52
TkCreate             : 2
TkDeactivate         : 40
TkDeactivation       : 19
TkDefault            : 21
TkDisyuncion         : 53
TkDiv                : 50
TkDosPuntos          : 14 42 43 43 44
TkDown               : 33
TkDrop               : 29
TkElse               : 43
TkEnd                : 6 14 42 43 44 46
TkExecute            : 46
TkFalse              : 66
TkIdent              : 12 13 28 35 67
TkIf                 : 42 43
TkIgual              : 54
TkInt                : 9
TkLeft               : 30
TkMayor              : 59
TkMayorIgual         : 57
TkMe                 : 64
TkMenor              : 58
TkMenorIgual         : 56
TkMod                : 51
TkMult               : 49
TkNegacion           : 61
TkNoIgual            : 55
TkNum                : 63
TkOn                 : 14
TkParAbre            : 60
TkParCierra          : 60
TkPunto              : 26 27 28 29 34 35 36 37 38 39 40 41
TkRead               : 34 35
TkResta              : 48 62
TkRight              : 31
TkSend               : 36
TkStore              : 26
TkSuma               : 47
TkTrue               : 65
TkUp                 : 32
TkWhile              : 44
error                : 

Nonterminals, with rules where they appear

ACTIONS              : 6 14
BOT                  : 0
CLOSE_SCOPE          : 1 14 45
CONDITION            : 14
CREATE               : 1 45
DECLARATIONS         : 2 6
DIRECTION            : 37 38
ENTER_BEHAVIOR       : 14
EXECUTE              : 1 45
EXIT_BEHAVIOR        : 14
EXP_BINARIA          : 20 26 29 38 42 43 44 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 61 62
IDENT_LIST           : 6 13 39 40 41
INSTRUCTION_C        : 14 22
INSTRUCTION_E        : 24 42 43 43 44 46
OPEN_SCOPE           : 2 3 14
REGISTER_ROBOTS      : 6
SIMPLE_INSTRUCTION_C : 22 23
SIMPLE_INSTRUCTION_E : 24 25
TYPE                 : 6
empty                : 4 5 7 8 15 16 17

Parsing method: LALR

state 0

    (0) S' -> . BOT
    (1) BOT -> . CREATE EXECUTE CLOSE_SCOPE
    (2) CREATE -> . TkCreate OPEN_SCOPE DECLARATIONS
    (3) CREATE -> . OPEN_SCOPE
    (4) OPEN_SCOPE -> . empty
    (69) empty -> .

    TkCreate        shift and go to state 3
    TkExecute       reduce using rule 69 (empty -> .)

    BOT                            shift and go to state 1
    CREATE                         shift and go to state 2
    OPEN_SCOPE                     shift and go to state 4
    empty                          shift and go to state 5

state 1

    (0) S' -> BOT .



state 2

    (1) BOT -> CREATE . EXECUTE CLOSE_SCOPE
    (46) EXECUTE -> . TkExecute INSTRUCTION_E TkEnd

    TkExecute       shift and go to state 7

    EXECUTE                        shift and go to state 6

state 3

    (2) CREATE -> TkCreate . OPEN_SCOPE DECLARATIONS
    (4) OPEN_SCOPE -> . empty
    (69) empty -> .

    TkInt           reduce using rule 69 (empty -> .)
    TkBool          reduce using rule 69 (empty -> .)
    TkCaracter      reduce using rule 69 (empty -> .)
    TkExecute       reduce using rule 69 (empty -> .)

    OPEN_SCOPE                     shift and go to state 8
    empty                          shift and go to state 5

state 4

    (3) CREATE -> OPEN_SCOPE .

    TkExecute       reduce using rule 3 (CREATE -> OPEN_SCOPE .)


state 5

    (4) OPEN_SCOPE -> empty .

    TkExecute       reduce using rule 4 (OPEN_SCOPE -> empty .)
    TkInt           reduce using rule 4 (OPEN_SCOPE -> empty .)
    TkBool          reduce using rule 4 (OPEN_SCOPE -> empty .)
    TkCaracter      reduce using rule 4 (OPEN_SCOPE -> empty .)
    TkStore         reduce using rule 4 (OPEN_SCOPE -> empty .)
    TkCollect       reduce using rule 4 (OPEN_SCOPE -> empty .)
    TkDrop          reduce using rule 4 (OPEN_SCOPE -> empty .)
    TkRead          reduce using rule 4 (OPEN_SCOPE -> empty .)
    TkSend          reduce using rule 4 (OPEN_SCOPE -> empty .)
    TkLeft          reduce using rule 4 (OPEN_SCOPE -> empty .)
    TkRight         reduce using rule 4 (OPEN_SCOPE -> empty .)
    TkUp            reduce using rule 4 (OPEN_SCOPE -> empty .)
    TkDown          reduce using rule 4 (OPEN_SCOPE -> empty .)


state 6

    (1) BOT -> CREATE EXECUTE . CLOSE_SCOPE
    (5) CLOSE_SCOPE -> . empty
    (69) empty -> .

    $end            reduce using rule 69 (empty -> .)

    CLOSE_SCOPE                    shift and go to state 9
    empty                          shift and go to state 10

state 7

    (46) EXECUTE -> TkExecute . INSTRUCTION_E TkEnd
    (24) INSTRUCTION_E -> . INSTRUCTION_E SIMPLE_INSTRUCTION_E
    (25) INSTRUCTION_E -> . SIMPLE_INSTRUCTION_E
    (39) SIMPLE_INSTRUCTION_E -> . TkActivate IDENT_LIST TkPunto
    (40) SIMPLE_INSTRUCTION_E -> . TkDeactivate IDENT_LIST TkPunto
    (41) SIMPLE_INSTRUCTION_E -> . TkAdvance IDENT_LIST TkPunto
    (42) SIMPLE_INSTRUCTION_E -> . TkIf EXP_BINARIA TkDosPuntos INSTRUCTION_E TkEnd
    (43) SIMPLE_INSTRUCTION_E -> . TkIf EXP_BINARIA TkDosPuntos INSTRUCTION_E TkElse TkDosPuntos INSTRUCTION_E TkEnd
    (44) SIMPLE_INSTRUCTION_E -> . TkWhile EXP_BINARIA TkDosPuntos INSTRUCTION_E TkEnd
    (45) SIMPLE_INSTRUCTION_E -> . CREATE EXECUTE CLOSE_SCOPE
    (2) CREATE -> . TkCreate OPEN_SCOPE DECLARATIONS
    (3) CREATE -> . OPEN_SCOPE
    (4) OPEN_SCOPE -> . empty
    (69) empty -> .

    TkActivate      shift and go to state 13
    TkDeactivate    shift and go to state 14
    TkAdvance       shift and go to state 15
    TkIf            shift and go to state 16
    TkWhile         shift and go to state 17
    TkCreate        shift and go to state 3
    TkExecute       reduce using rule 69 (empty -> .)

    INSTRUCTION_E                  shift and go to state 11
    SIMPLE_INSTRUCTION_E           shift and go to state 12
    CREATE                         shift and go to state 18
    OPEN_SCOPE                     shift and go to state 4
    empty                          shift and go to state 5

state 8

    (2) CREATE -> TkCreate OPEN_SCOPE . DECLARATIONS
    (6) DECLARATIONS -> . DECLARATIONS TYPE TkBot IDENT_LIST REGISTER_ROBOTS ACTIONS TkEnd
    (8) DECLARATIONS -> . empty
    (69) empty -> .

    TkInt           reduce using rule 69 (empty -> .)
    TkBool          reduce using rule 69 (empty -> .)
    TkCaracter      reduce using rule 69 (empty -> .)
    TkExecute       reduce using rule 69 (empty -> .)

    DECLARATIONS                   shift and go to state 19
    empty                          shift and go to state 20

state 9

    (1) BOT -> CREATE EXECUTE CLOSE_SCOPE .

    $end            reduce using rule 1 (BOT -> CREATE EXECUTE CLOSE_SCOPE .)


state 10

    (5) CLOSE_SCOPE -> empty .

    $end            reduce using rule 5 (CLOSE_SCOPE -> empty .)
    TkEnd           reduce using rule 5 (CLOSE_SCOPE -> empty .)
    TkActivate      reduce using rule 5 (CLOSE_SCOPE -> empty .)
    TkDeactivate    reduce using rule 5 (CLOSE_SCOPE -> empty .)
    TkAdvance       reduce using rule 5 (CLOSE_SCOPE -> empty .)
    TkIf            reduce using rule 5 (CLOSE_SCOPE -> empty .)
    TkWhile         reduce using rule 5 (CLOSE_SCOPE -> empty .)
    TkCreate        reduce using rule 5 (CLOSE_SCOPE -> empty .)
    TkExecute       reduce using rule 5 (CLOSE_SCOPE -> empty .)
    TkElse          reduce using rule 5 (CLOSE_SCOPE -> empty .)
    TkOn            reduce using rule 5 (CLOSE_SCOPE -> empty .)


state 11

    (46) EXECUTE -> TkExecute INSTRUCTION_E . TkEnd
    (24) INSTRUCTION_E -> INSTRUCTION_E . SIMPLE_INSTRUCTION_E
    (39) SIMPLE_INSTRUCTION_E -> . TkActivate IDENT_LIST TkPunto
    (40) SIMPLE_INSTRUCTION_E -> . TkDeactivate IDENT_LIST TkPunto
    (41) SIMPLE_INSTRUCTION_E -> . TkAdvance IDENT_LIST TkPunto
    (42) SIMPLE_INSTRUCTION_E -> . TkIf EXP_BINARIA TkDosPuntos INSTRUCTION_E TkEnd
    (43) SIMPLE_INSTRUCTION_E -> . TkIf EXP_BINARIA TkDosPuntos INSTRUCTION_E TkElse TkDosPuntos INSTRUCTION_E TkEnd
    (44) SIMPLE_INSTRUCTION_E -> . TkWhile EXP_BINARIA TkDosPuntos INSTRUCTION_E TkEnd
    (45) SIMPLE_INSTRUCTION_E -> . CREATE EXECUTE CLOSE_SCOPE
    (2) CREATE -> . TkCreate OPEN_SCOPE DECLARATIONS
    (3) CREATE -> . OPEN_SCOPE
    (4) OPEN_SCOPE -> . empty
    (69) empty -> .

    TkEnd           shift and go to state 21
    TkActivate      shift and go to state 13
    TkDeactivate    shift and go to state 14
    TkAdvance       shift and go to state 15
    TkIf            shift and go to state 16
    TkWhile         shift and go to state 17
    TkCreate        shift and go to state 3
    TkExecute       reduce using rule 69 (empty -> .)

    SIMPLE_INSTRUCTION_E           shift and go to state 22
    CREATE                         shift and go to state 18
    OPEN_SCOPE                     shift and go to state 4
    empty                          shift and go to state 5

state 12

    (25) INSTRUCTION_E -> SIMPLE_INSTRUCTION_E .

    TkEnd           reduce using rule 25 (INSTRUCTION_E -> SIMPLE_INSTRUCTION_E .)
    TkActivate      reduce using rule 25 (INSTRUCTION_E -> SIMPLE_INSTRUCTION_E .)
    TkDeactivate    reduce using rule 25 (INSTRUCTION_E -> SIMPLE_INSTRUCTION_E .)
    TkAdvance       reduce using rule 25 (INSTRUCTION_E -> SIMPLE_INSTRUCTION_E .)
    TkIf            reduce using rule 25 (INSTRUCTION_E -> SIMPLE_INSTRUCTION_E .)
    TkWhile         reduce using rule 25 (INSTRUCTION_E -> SIMPLE_INSTRUCTION_E .)
    TkCreate        reduce using rule 25 (INSTRUCTION_E -> SIMPLE_INSTRUCTION_E .)
    TkExecute       reduce using rule 25 (INSTRUCTION_E -> SIMPLE_INSTRUCTION_E .)
    TkElse          reduce using rule 25 (INSTRUCTION_E -> SIMPLE_INSTRUCTION_E .)


state 13

    (39) SIMPLE_INSTRUCTION_E -> TkActivate . IDENT_LIST TkPunto
    (12) IDENT_LIST -> . TkIdent
    (13) IDENT_LIST -> . IDENT_LIST TkComa TkIdent

    TkIdent         shift and go to state 24

    IDENT_LIST                     shift and go to state 23

state 14

    (40) SIMPLE_INSTRUCTION_E -> TkDeactivate . IDENT_LIST TkPunto
    (12) IDENT_LIST -> . TkIdent
    (13) IDENT_LIST -> . IDENT_LIST TkComa TkIdent

    TkIdent         shift and go to state 24

    IDENT_LIST                     shift and go to state 25

state 15

    (41) SIMPLE_INSTRUCTION_E -> TkAdvance . IDENT_LIST TkPunto
    (12) IDENT_LIST -> . TkIdent
    (13) IDENT_LIST -> . IDENT_LIST TkComa TkIdent

    TkIdent         shift and go to state 24

    IDENT_LIST                     shift and go to state 26

state 16

    (42) SIMPLE_INSTRUCTION_E -> TkIf . EXP_BINARIA TkDosPuntos INSTRUCTION_E TkEnd
    (43) SIMPLE_INSTRUCTION_E -> TkIf . EXP_BINARIA TkDosPuntos INSTRUCTION_E TkElse TkDosPuntos INSTRUCTION_E TkEnd
    (47) EXP_BINARIA -> . EXP_BINARIA TkSuma EXP_BINARIA
    (48) EXP_BINARIA -> . EXP_BINARIA TkResta EXP_BINARIA
    (49) EXP_BINARIA -> . EXP_BINARIA TkMult EXP_BINARIA
    (50) EXP_BINARIA -> . EXP_BINARIA TkDiv EXP_BINARIA
    (51) EXP_BINARIA -> . EXP_BINARIA TkMod EXP_BINARIA
    (52) EXP_BINARIA -> . EXP_BINARIA TkConjuncion EXP_BINARIA
    (53) EXP_BINARIA -> . EXP_BINARIA TkDisyuncion EXP_BINARIA
    (54) EXP_BINARIA -> . EXP_BINARIA TkIgual EXP_BINARIA
    (55) EXP_BINARIA -> . EXP_BINARIA TkNoIgual EXP_BINARIA
    (56) EXP_BINARIA -> . EXP_BINARIA TkMenorIgual EXP_BINARIA
    (57) EXP_BINARIA -> . EXP_BINARIA TkMayorIgual EXP_BINARIA
    (58) EXP_BINARIA -> . EXP_BINARIA TkMenor EXP_BINARIA
    (59) EXP_BINARIA -> . EXP_BINARIA TkMayor EXP_BINARIA
    (60) EXP_BINARIA -> . TkParAbre EXP_BINARIA TkParCierra
    (61) EXP_BINARIA -> . TkNegacion EXP_BINARIA
    (62) EXP_BINARIA -> . TkResta EXP_BINARIA
    (63) EXP_BINARIA -> . TkNum
    (64) EXP_BINARIA -> . TkMe
    (65) EXP_BINARIA -> . TkTrue
    (66) EXP_BINARIA -> . TkFalse
    (67) EXP_BINARIA -> . TkIdent
    (68) EXP_BINARIA -> . TkCaracter

    TkParAbre       shift and go to state 29
    TkNegacion      shift and go to state 30
    TkResta         shift and go to state 28
    TkNum           shift and go to state 31
    TkMe            shift and go to state 32
    TkTrue          shift and go to state 33
    TkFalse         shift and go to state 34
    TkIdent         shift and go to state 35
    TkCaracter      shift and go to state 36

    EXP_BINARIA                    shift and go to state 27

state 17

    (44) SIMPLE_INSTRUCTION_E -> TkWhile . EXP_BINARIA TkDosPuntos INSTRUCTION_E TkEnd
    (47) EXP_BINARIA -> . EXP_BINARIA TkSuma EXP_BINARIA
    (48) EXP_BINARIA -> . EXP_BINARIA TkResta EXP_BINARIA
    (49) EXP_BINARIA -> . EXP_BINARIA TkMult EXP_BINARIA
    (50) EXP_BINARIA -> . EXP_BINARIA TkDiv EXP_BINARIA
    (51) EXP_BINARIA -> . EXP_BINARIA TkMod EXP_BINARIA
    (52) EXP_BINARIA -> . EXP_BINARIA TkConjuncion EXP_BINARIA
    (53) EXP_BINARIA -> . EXP_BINARIA TkDisyuncion EXP_BINARIA
    (54) EXP_BINARIA -> . EXP_BINARIA TkIgual EXP_BINARIA
    (55) EXP_BINARIA -> . EXP_BINARIA TkNoIgual EXP_BINARIA
    (56) EXP_BINARIA -> . EXP_BINARIA TkMenorIgual EXP_BINARIA
    (57) EXP_BINARIA -> . EXP_BINARIA TkMayorIgual EXP_BINARIA
    (58) EXP_BINARIA -> . EXP_BINARIA TkMenor EXP_BINARIA
    (59) EXP_BINARIA -> . EXP_BINARIA TkMayor EXP_BINARIA
    (60) EXP_BINARIA -> . TkParAbre EXP_BINARIA TkParCierra
    (61) EXP_BINARIA -> . TkNegacion EXP_BINARIA
    (62) EXP_BINARIA -> . TkResta EXP_BINARIA
    (63) EXP_BINARIA -> . TkNum
    (64) EXP_BINARIA -> . TkMe
    (65) EXP_BINARIA -> . TkTrue
    (66) EXP_BINARIA -> . TkFalse
    (67) EXP_BINARIA -> . TkIdent
    (68) EXP_BINARIA -> . TkCaracter

    TkParAbre       shift and go to state 29
    TkNegacion      shift and go to state 30
    TkResta         shift and go to state 28
    TkNum           shift and go to state 31
    TkMe            shift and go to state 32
    TkTrue          shift and go to state 33
    TkFalse         shift and go to state 34
    TkIdent         shift and go to state 35
    TkCaracter      shift and go to state 36

    EXP_BINARIA                    shift and go to state 37

state 18

    (45) SIMPLE_INSTRUCTION_E -> CREATE . EXECUTE CLOSE_SCOPE
    (46) EXECUTE -> . TkExecute INSTRUCTION_E TkEnd

    TkExecute       shift and go to state 7

    EXECUTE                        shift and go to state 38

state 19

    (2) CREATE -> TkCreate OPEN_SCOPE DECLARATIONS .
    (6) DECLARATIONS -> DECLARATIONS . TYPE TkBot IDENT_LIST REGISTER_ROBOTS ACTIONS TkEnd
    (9) TYPE -> . TkInt
    (10) TYPE -> . TkBool
    (11) TYPE -> . TkCaracter

    TkExecute       reduce using rule 2 (CREATE -> TkCreate OPEN_SCOPE DECLARATIONS .)
    TkInt           shift and go to state 40
    TkBool          shift and go to state 41
    TkCaracter      shift and go to state 42

    TYPE                           shift and go to state 39

state 20

    (8) DECLARATIONS -> empty .

    TkInt           reduce using rule 8 (DECLARATIONS -> empty .)
    TkBool          reduce using rule 8 (DECLARATIONS -> empty .)
    TkCaracter      reduce using rule 8 (DECLARATIONS -> empty .)
    TkExecute       reduce using rule 8 (DECLARATIONS -> empty .)


state 21

    (46) EXECUTE -> TkExecute INSTRUCTION_E TkEnd .

    $end            reduce using rule 46 (EXECUTE -> TkExecute INSTRUCTION_E TkEnd .)
    TkEnd           reduce using rule 46 (EXECUTE -> TkExecute INSTRUCTION_E TkEnd .)
    TkActivate      reduce using rule 46 (EXECUTE -> TkExecute INSTRUCTION_E TkEnd .)
    TkDeactivate    reduce using rule 46 (EXECUTE -> TkExecute INSTRUCTION_E TkEnd .)
    TkAdvance       reduce using rule 46 (EXECUTE -> TkExecute INSTRUCTION_E TkEnd .)
    TkIf            reduce using rule 46 (EXECUTE -> TkExecute INSTRUCTION_E TkEnd .)
    TkWhile         reduce using rule 46 (EXECUTE -> TkExecute INSTRUCTION_E TkEnd .)
    TkCreate        reduce using rule 46 (EXECUTE -> TkExecute INSTRUCTION_E TkEnd .)
    TkExecute       reduce using rule 46 (EXECUTE -> TkExecute INSTRUCTION_E TkEnd .)
    TkElse          reduce using rule 46 (EXECUTE -> TkExecute INSTRUCTION_E TkEnd .)


state 22

    (24) INSTRUCTION_E -> INSTRUCTION_E SIMPLE_INSTRUCTION_E .

    TkEnd           reduce using rule 24 (INSTRUCTION_E -> INSTRUCTION_E SIMPLE_INSTRUCTION_E .)
    TkActivate      reduce using rule 24 (INSTRUCTION_E -> INSTRUCTION_E SIMPLE_INSTRUCTION_E .)
    TkDeactivate    reduce using rule 24 (INSTRUCTION_E -> INSTRUCTION_E SIMPLE_INSTRUCTION_E .)
    TkAdvance       reduce using rule 24 (INSTRUCTION_E -> INSTRUCTION_E SIMPLE_INSTRUCTION_E .)
    TkIf            reduce using rule 24 (INSTRUCTION_E -> INSTRUCTION_E SIMPLE_INSTRUCTION_E .)
    TkWhile         reduce using rule 24 (INSTRUCTION_E -> INSTRUCTION_E SIMPLE_INSTRUCTION_E .)
    TkCreate        reduce using rule 24 (INSTRUCTION_E -> INSTRUCTION_E SIMPLE_INSTRUCTION_E .)
    TkExecute       reduce using rule 24 (INSTRUCTION_E -> INSTRUCTION_E SIMPLE_INSTRUCTION_E .)
    TkElse          reduce using rule 24 (INSTRUCTION_E -> INSTRUCTION_E SIMPLE_INSTRUCTION_E .)


state 23

    (39) SIMPLE_INSTRUCTION_E -> TkActivate IDENT_LIST . TkPunto
    (13) IDENT_LIST -> IDENT_LIST . TkComa TkIdent

    TkPunto         shift and go to state 43
    TkComa          shift and go to state 44


state 24

    (12) IDENT_LIST -> TkIdent .

    TkPunto         reduce using rule 12 (IDENT_LIST -> TkIdent .)
    TkComa          reduce using rule 12 (IDENT_LIST -> TkIdent .)
    TkEnd           reduce using rule 12 (IDENT_LIST -> TkIdent .)
    TkOn            reduce using rule 12 (IDENT_LIST -> TkIdent .)


state 25

    (40) SIMPLE_INSTRUCTION_E -> TkDeactivate IDENT_LIST . TkPunto
    (13) IDENT_LIST -> IDENT_LIST . TkComa TkIdent

    TkPunto         shift and go to state 45
    TkComa          shift and go to state 44


state 26

    (41) SIMPLE_INSTRUCTION_E -> TkAdvance IDENT_LIST . TkPunto
    (13) IDENT_LIST -> IDENT_LIST . TkComa TkIdent

    TkPunto         shift and go to state 46
    TkComa          shift and go to state 44


state 27

    (42) SIMPLE_INSTRUCTION_E -> TkIf EXP_BINARIA . TkDosPuntos INSTRUCTION_E TkEnd
    (43) SIMPLE_INSTRUCTION_E -> TkIf EXP_BINARIA . TkDosPuntos INSTRUCTION_E TkElse TkDosPuntos INSTRUCTION_E TkEnd
    (47) EXP_BINARIA -> EXP_BINARIA . TkSuma EXP_BINARIA
    (48) EXP_BINARIA -> EXP_BINARIA . TkResta EXP_BINARIA
    (49) EXP_BINARIA -> EXP_BINARIA . TkMult EXP_BINARIA
    (50) EXP_BINARIA -> EXP_BINARIA . TkDiv EXP_BINARIA
    (51) EXP_BINARIA -> EXP_BINARIA . TkMod EXP_BINARIA
    (52) EXP_BINARIA -> EXP_BINARIA . TkConjuncion EXP_BINARIA
    (53) EXP_BINARIA -> EXP_BINARIA . TkDisyuncion EXP_BINARIA
    (54) EXP_BINARIA -> EXP_BINARIA . TkIgual EXP_BINARIA
    (55) EXP_BINARIA -> EXP_BINARIA . TkNoIgual EXP_BINARIA
    (56) EXP_BINARIA -> EXP_BINARIA . TkMenorIgual EXP_BINARIA
    (57) EXP_BINARIA -> EXP_BINARIA . TkMayorIgual EXP_BINARIA
    (58) EXP_BINARIA -> EXP_BINARIA . TkMenor EXP_BINARIA
    (59) EXP_BINARIA -> EXP_BINARIA . TkMayor EXP_BINARIA

    TkDosPuntos     shift and go to state 47
    TkSuma          shift and go to state 48
    TkResta         shift and go to state 49
    TkMult          shift and go to state 50
    TkDiv           shift and go to state 51
    TkMod           shift and go to state 52
    TkConjuncion    shift and go to state 53
    TkDisyuncion    shift and go to state 54
    TkIgual         shift and go to state 55
    TkNoIgual       shift and go to state 56
    TkMenorIgual    shift and go to state 57
    TkMayorIgual    shift and go to state 58
    TkMenor         shift and go to state 59
    TkMayor         shift and go to state 60


state 28

    (62) EXP_BINARIA -> TkResta . EXP_BINARIA
    (47) EXP_BINARIA -> . EXP_BINARIA TkSuma EXP_BINARIA
    (48) EXP_BINARIA -> . EXP_BINARIA TkResta EXP_BINARIA
    (49) EXP_BINARIA -> . EXP_BINARIA TkMult EXP_BINARIA
    (50) EXP_BINARIA -> . EXP_BINARIA TkDiv EXP_BINARIA
    (51) EXP_BINARIA -> . EXP_BINARIA TkMod EXP_BINARIA
    (52) EXP_BINARIA -> . EXP_BINARIA TkConjuncion EXP_BINARIA
    (53) EXP_BINARIA -> . EXP_BINARIA TkDisyuncion EXP_BINARIA
    (54) EXP_BINARIA -> . EXP_BINARIA TkIgual EXP_BINARIA
    (55) EXP_BINARIA -> . EXP_BINARIA TkNoIgual EXP_BINARIA
    (56) EXP_BINARIA -> . EXP_BINARIA TkMenorIgual EXP_BINARIA
    (57) EXP_BINARIA -> . EXP_BINARIA TkMayorIgual EXP_BINARIA
    (58) EXP_BINARIA -> . EXP_BINARIA TkMenor EXP_BINARIA
    (59) EXP_BINARIA -> . EXP_BINARIA TkMayor EXP_BINARIA
    (60) EXP_BINARIA -> . TkParAbre EXP_BINARIA TkParCierra
    (61) EXP_BINARIA -> . TkNegacion EXP_BINARIA
    (62) EXP_BINARIA -> . TkResta EXP_BINARIA
    (63) EXP_BINARIA -> . TkNum
    (64) EXP_BINARIA -> . TkMe
    (65) EXP_BINARIA -> . TkTrue
    (66) EXP_BINARIA -> . TkFalse
    (67) EXP_BINARIA -> . TkIdent
    (68) EXP_BINARIA -> . TkCaracter

    TkParAbre       shift and go to state 29
    TkNegacion      shift and go to state 30
    TkResta         shift and go to state 28
    TkNum           shift and go to state 31
    TkMe            shift and go to state 32
    TkTrue          shift and go to state 33
    TkFalse         shift and go to state 34
    TkIdent         shift and go to state 35
    TkCaracter      shift and go to state 36

    EXP_BINARIA                    shift and go to state 61

state 29
